--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@nextui-org/react": "^2.2.9",
     "@tabler/icons-react": "^2.47.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.10.6",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
