--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.10.6",
     "tailwind-merge": "^2.2.1"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/scrollreveal": "^0.0.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
